@startuml
title 道具生效观察者模式 (Observer Pattern)

skinparam nodesep 50
skinparam ranksep 60

' ================
' 1. 抽象观察者接口
' ================
interface PropObserver <<interface>> {
    + {abstract} onBombActive(): void
    + {abstract} onIceActive(): void
}

' =============
' 2. 观察者实现层
' =============
abstract class AbstractEnemy {
    + {abstract} getScore(): int
    + {abstract} dropProps(): List<AbstractProp>
    + onBombActive(): void
    # freezeWithRecovery(sleepTimeMs: int): void
}
AbstractEnemy .up.|> PropObserver

class MobEnemy {
    + onIceActive(): void
}
class EliteEnemy {
    + onIceActive(): void
}
class ElitePlusEnemy {
    + onIceActive(): void
}
class EliteProEnemy {
    + onBombActive(): void
    + onIceActive(): void
}
class BossEnemy {
    + onBombActive(): void
    + onIceActive(): void
}
class EnemyBullet {
    + onBombActive(): void
    + onIceActive(): void
}

MobEnemy -up-|> AbstractEnemy
EliteEnemy -up-|> AbstractEnemy
ElitePlusEnemy -up-|> AbstractEnemy
EliteProEnemy -up-|> AbstractEnemy
BossEnemy -up-|> AbstractEnemy

' 子弹不继承飞机，直接实现接口
EnemyBullet .up.|> PropObserver

' =============
' 3. 抽象观察目标
' =============
abstract class AbstractProp {
    # observers: List<PropObserver>
    + addObserver(observer: PropObserver): void
    + removeObserver(observer: PropObserver): void
    + {abstract} active(heroAircraft: HeroAircraft): void
}

' =============
' 4. 具体观察目标 
' =============
class BombSupply {
    + BombSupply(locationX: int, locationY: int, speedX: int, speedY: int)
    + notifyObservers(): void
    + active(heroAircraft: HeroAircraft): void
}

class FreezeSupply {
    + FreezeSupply(locationX: int, locationY: int, speedX: int, speedY: int)
    + notifyObservers(): void
    + active(heroAircraft: HeroAircraft): void
}

BombSupply -up-|> AbstractProp
FreezeSupply -up-|> AbstractProp

' ==========
' 5. 依赖与聚合关系
' ==========
AbstractProp o-right-> PropObserver : " 通知"

' 注：PropSubject 类由于 Java 单继承限制，在当前架构中作为闲置或辅助类存在，
' 实际的订阅-分发机制由 AbstractProp 及其子类接管，故 UML 核心链路以 AbstractProp 为准。
@enduml